ops/monitor/grafana/grafana/templates/headless-service.yaml
---
# Source: grafana/templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-5-3-0-headless
  namespace: grafana
  labels:
    helm.sh/chart: grafana-5.3.0
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-5-3-0
    app.kubernetes.io/version: "7.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-5-3-0
  type: ClusterIP
