ops/monitor/grafana/grafana/templates/service.yaml
---
# Source: grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-5-3-0
  namespace: grafana
  labels:
    helm.sh/chart: grafana-5.3.0
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-5-3-0
    app.kubernetes.io/version: "7.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000

  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-5-3-0
